@@ -1,0 +1,4 @@
+Tool replaces malloc? 0
+The name of the tool is cachegrind actual length 11
+Queried tool len 11
+The name of the tool [truncated] is cach actual length 11
