@@ -7169,8 +7169,10 @@ typedef
    ENTRIES, NOR DELETE ANY -- add new ones at the end of the most
    relevant group. */
 typedef
-   enum { VG_USERREQ__RUNNING_ON_VALGRIND  = 0x1001,
-          VG_USERREQ__DISCARD_TRANSLATIONS = 0x1002,
+   enum { VG_USERREQ__RUNNING_ON_VALGRIND      = 0x1001,
+          VG_USERREQ__DISCARD_TRANSLATIONS     = 0x1002,
+          VG_USERREQ__VALGRIND_REPLACES_MALLOC = 0x1003,
+          VG_USERREQ__VALGRIND_GET_TOOLNAME    = 0x1004,
 
           /* These allow any function to be called from the simulated
              CPU but run on the real CPU.  Nb: the first arg passed to
@@ -7272,6 +7274,30 @@ typedef
 #define VALGRIND_DISCARD_TRANSLATIONS(_qzz_addr,_qzz_len)              \
     VALGRIND_DO_CLIENT_REQUEST_STMT(VG_USERREQ__DISCARD_TRANSLATIONS,  \
                                     _qzz_addr, _qzz_len, 0, 0, 0)
+
+/* Returns 1 if the tool replaces malloc (e.g., memcheck). Returns 0
+   if the tool does not replace malloc (e.g., cachegrind and callgrind)
+   or if the executable is not running under VALGRIND. */
+#define VALGRIND_REPLACES_MALLOC                                          \
+    (unsigned)VALGRIND_DO_CLIENT_REQUEST_EXPR(0 /* if not */,             \
+                                    VG_USERREQ__VALGRIND_REPLACES_MALLOC, \
+                                    0, 0, 0, 0, 0)
+
+/* Get the running tool name as a string.
+   Returns the required length (including terminating nul) for the input
+   zzbuf. Returns 0 and the contents of zzbuf are not modified
+   if not running under Valgrind.
+   zzbuf may be NULL, which can be used to query the required buffer
+   length before making a real request for the tool name.
+   zzbuflen should be the length of zzbuf.
+   The returned string in zzbuf will be nul terminated. If zzbuf is too
+   small to contain the tool name then the name will be truncated */
+#define VALGRIND_GET_TOOLNAME(zzbuf,zzbuflen)                          \
+    (unsigned)VALGRIND_DO_CLIENT_REQUEST_EXPR(0,                       \
+                                    VG_USERREQ__VALGRIND_GET_TOOLNAME, \
+                                    (char*)(zzbuf),                    \
+                                    (zzbuflen),                        \
+                                    0, 0, 0)
 
 #define VALGRIND_INNER_THREADS(_qzz_addr)                               \
    VALGRIND_DO_CLIENT_REQUEST_STMT(VG_USERREQ__INNER_THREADS,           \
