@@ -1,0 +1,4 @@
+Tool replaces malloc? 1
+The name of the tool is memcheck actual length 9
+Queried tool len 9
+The name of the tool [truncated] is memc actual length 9
