@@ -1,0 +1,4 @@
+Tool replaces malloc? 0
+The name of the tool is none actual length 5
+Queried tool len 5
+The name of the tool [not truncated] is none actual length 5
