@@ -79,6 +79,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 514094  readlink("/proc/self/exe") overwrites buffer beyond its return value
 514206  Assertion '!sr_isError(sr)' failed - mmap fd points to an open
         descriptor to a PCI device
+514343  Add a valgrind.h macro VALGRIND_REPLACES_MALLOC
 514596  Add SSE4.1 BLENDPD instruction for x86 32 bit
 514613  Unclosed leak_summary/still_reachable tag in xml output
 514659  ltp 20250930 vs linux 6.18.3 doesn't build
